[package]
name = "pubsubber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.21", features = ["tokio-comp"], optional = true }
async-nats = {version = "0.15", optional = true}
async-trait = "0.1"
futures = "0.3"


[dev-dependencies]
tokio = {version = "*", features = ["full"]}


[[test]]
name = "redis_test"
path = "tests/redis_test.rs"
required-features = ["redis"]
