[package]
name = "pubsubber"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.21", features = ["tokio-comp"], optional = true }
async-nats = {version = "0.15", optional = true}
circulate = {version = "0.3", optional = true}
async-trait = "0.1"
futures = "0.3"
cfg-if = "1.0.0"

[dev-dependencies]
tokio = {version = "*", features = ["full"]}

[features]
nats = ["async-nats"]

[[test]]
name = "redis_test"
path = "tests/redis_test.rs"
required-features = ["redis"]

[[test]]
name = "nats_test"
path = "tests/nats_test.rs"
required-features = ["nats"]
